--- a/PS6-CHEME-5800-Student-QDrugs-Fall-2025.ipynb
+++ b/PS6-CHEME-5800-Student-QDrugs-Fall-2025.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "37f641d8",
    "metadata": {},
    "outputs": [],
@@ -230,31 +230,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e4ffe604",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching (Array{Tuple{Float64, Float64}})(::Int64, ::Int64)\nThe type `Array{Tuple{Float64, Float64}}` exists, but no method is defined for this combination of argument types when trying to construct it.\n\nClosest candidates are:\n  (Array{T})(!Matched::Missing, ::Any...) where T\n   @ Base baseext.jl:46\n  (Array{T})(!Matched::UndefInitializer, ::Int64, !Matched::Int64, !Matched::Int64) where T\n   @ Core boot.jl:667\n  (Array{T})(!Matched::UndefInitializer, ::Int64, !Matched::Int64) where T\n   @ Core boot.jl:666\n  ...\n",
+     "ename": "FieldError",
+     "evalue": "FieldError: type MyExperimentalDrugCocktailContext has no field `S`, available fields: `K`, `m`, `γ`, `B`, `cost`, `levels`, `W`, `safety`, `bounds`",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching (Array{Tuple{Float64, Float64}})(::Int64, ::Int64)\n",
-      "The type `Array{Tuple{Float64, Float64}}` exists, but no method is defined for this combination of argument types when trying to construct it.\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  (Array{T})(!Matched::Missing, ::Any...) where T\n",
-      "   @ Base baseext.jl:46\n",
-      "  (Array{T})(!Matched::UndefInitializer, ::Int64, !Matched::Int64, !Matched::Int64) where T\n",
-      "   @ Core boot.jl:667\n",
-      "  (Array{T})(!Matched::UndefInitializer, ::Int64, !Matched::Int64) where T\n",
-      "   @ Core boot.jl:666\n",
-      "  ...\n",
-      "\n",
+      "FieldError: type MyExperimentalDrugCocktailContext has no field `S`, available fields: `K`, `m`, `γ`, `B`, `cost`, `levels`, `W`, `safety`, `bounds`\n",
       "\n",
       "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Documents/GitHub/ps6-cheme-5800-f25-sp2229/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X15sZmlsZQ==.jl:37"
+      " [1] setproperty!(x::MyExperimentalDrugCocktailContext, f::Symbol, v::Float64)\n",
+      "   @ Base ./Base_compiler.jl:56\n",
+      " [2] build(modeltype::Type{MyExperimentalDrugCocktailContext}, data::@NamedTuple{K::Int64, m::Int64, 𝒜::Vector{Int64}, 𝒮::Vector{Int64}, W::Float64, B::Float64, S::Float64, cost::Dict{Int64, Float64}, levels::Dict{Int64, NamedTuple}, γ::Vector{Float64}, bounds::Matrix{Float64}})\n",
+      "   @ Main ~/Documents/GitHub/ps6-cheme-5800-f25-sp2229/src/Factory.jl:37\n",
+      " [3] top-level scope\n",
+      "   @ ~/Documents/GitHub/ps6-cheme-5800-f25-sp2229/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X15sZmlsZQ==.jl:46"
      ]
     }
    ],
@@ -297,11 +290,10 @@
     "    ß= 0.5; #safety factor variable \n",
     "    bounds = zeros(Float64, K, 2); # define bounds array\n",
     "    for i ∈ 1:K #for all drug types\n",
-    "        bounds[i,2] = (levels[i].high * W * ß); #max \n",
-    "        bounds[i,1] = (levels[i].low * W * ß); # min\n",
+    "        bounds[i,2] = (1+ß*randn())*S; #max \n",
+    "        bounds[i,1] = (0.0); # min\n",
     "    end\n",
     "        \n",
-    "\n",
     "    # build the model -\n",
     "    # TODO: build the MyExperimentalDrugCocktailContext model here. Dont forget to pass in all necessary parameters!\n",
     "   \n",
@@ -313,7 +305,7 @@
     "        W=W, \n",
     "        B=B,\n",
     "        S=S,\n",
-    "        costs=costs,\n",
+    "        cost =costs,\n",
     "        levels=levels,\n",
     "        γ=γ,\n",
     "        bounds=bounds\n",
@@ -335,24 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "42c97063",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `contextmodel` not defined in `Main`\nSuggestion: add an appropriate import or assignment. This global was declared but not assigned.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `contextmodel` not defined in `Main`\n",
-      "Suggestion: add an appropriate import or assignment. This global was declared but not assigned.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Documents/GitHub/ps6-cheme-5800-f25-sp2229/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X20sZmlsZQ==.jl:7"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "let\n",
     "    # initialize -\n",
