--- a/PS6-CHEME-5800-Student-QDrugs-Fall-2025.ipynb
+++ b/PS6-CHEME-5800-Student-QDrugs-Fall-2025.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "4cdd3b61",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 47,
    "id": "03be1ceb",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
     "    W = context.W; # drug interaction matrix\n",
     "    safety = context.safety; # safety constraint for maximum allowable dosage units: mg/kg-day\n",
     "    γ = context.γ; # discount factor\n",
-    "    B = context.B; # budget in USD\n",
+    "    B = 50; # budget in USD\n",
     "    N = 2^K; # number of actions\n",
     "    M = m^K; # number of states\n",
     "    constraint_penalty = -10000.0; # penalty for violating budget constraint\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "id": "37f641d8",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "id": "e4ffe604",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "id": "42c97063",
    "metadata": {},
    "outputs": [
@@ -432,9 +432,9 @@
       " \u001b[1m  drug \u001b[0m \u001b[1m unit_cost \u001b[0m \u001b[1m low_conc \u001b[0m \u001b[1m nominal_conc \u001b[0m \u001b[1m high_conc \u001b[0m \u001b[1m        γ \u001b[0m\n",
       " \u001b[90m Int64 \u001b[0m \u001b[90m   Float64 \u001b[0m \u001b[90m  Float64 \u001b[0m \u001b[90m      Float64 \u001b[0m \u001b[90m   Float64 \u001b[0m \u001b[90m  Float64 \u001b[0m\n",
       " ------- ----------- ---------- -------------- ----------- ----------\n",
-      "      1         0.7        1.1            3.6         8.0   0.704736\n",
-      "      2         0.5        1.4            4.5         5.0   0.573593\n",
-      "      3         0.3        1.5            4.4         6.0    1.31635\n",
+      "      1         1.0        1.0            4.3         8.0   -0.74312\n",
+      "      2         0.1        1.4            4.5         7.0    2.18393\n",
+      "      3         0.8        1.7            4.3         9.0    0.76801\n",
       " ------- ----------- ---------- -------------- ----------- ----------\n"
      ]
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 51,
    "id": "383fe3d6",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 52,
    "id": "f29c5ccf",
    "metadata": {},
    "outputs": [],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 53,
    "id": "13dc1ef7",
    "metadata": {},
    "outputs": [
@@ -565,26 +565,26 @@
      "data": {
       "text/plain": [
        "27×8 Matrix{Float64}:\n",
-       "     -3.99895e5  -430452.0        …       -1.09882e6       -1.28621e6\n",
-       "     -3.4835e5        -3.54264e5          -7.09073e5  -777353.0\n",
-       "     -5.23353e5       -3.99507e5          -1.46965e6       -2.45141e6\n",
-       "     -1.81674e5  -186892.0                -1.33208e6       -1.01006e6\n",
-       "     -1.07792e5       -1.34606e5          -8.29956e5       -2.05097e5\n",
-       "     -3.55785e5       -1.4917e5   …       -1.28249e6       -1.28937e6\n",
-       "     -1.98421e5       -1.98163e5     -680112.0        -680898.0\n",
-       "     -2.85883e5  -291318.0                -3.71675e5       -5.28017e5\n",
-       "     -6.86961e5       -4.38292e5          -1.72479e6       -1.27472e6\n",
-       "     -3.20515e5       -3.43222e5          -6.56701e5       -9.09812e5\n",
-       "      ⋮                           ⋱                   \n",
-       " -73000.7             -1.33198e5     -468838.0             -4.65456e5\n",
-       " -10153.2         -92430.7                -4.13304e5       -2.8285e5\n",
-       "     -5.24441e5   -89040.3        …       -1.41452e6       -9.3031e5\n",
-       " -49782.3             -1.66609e5          -3.39373e5  -394558.0\n",
-       " -34073.2             -1.68563e5          -1.75118e5       -1.58074e5\n",
-       "     -4.19175e5   -75935.9                -7.23547e5       -6.79088e5\n",
-       "     -1.57285e5       -1.44609e5          -1.69513e5       -3.12461e5\n",
-       "     -2.98409e5       -2.94124e5  …       -3.19513e5  -323112.0\n",
-       "     -7.49456e5       -6.04232e5          -2.13088e6       -2.7623e6"
+       " -4.62702e8  -2.77341e6  -7.4277e8   …  -1.30307e9  -3.49798e9  -5.11029e9\n",
+       " -4.83126e6  -1.95779e6  -3.78471e7     -2.06715e9  -1.01648e9  -2.19241e9\n",
+       " -1.96599e9  -1.15752e6  -2.07603e9     -7.22791e8  -6.56637e9  -9.02983e9\n",
+       " -5.07506e8  -1.35266e6  -6.66169e8     -1.46319e9  -4.20115e9  -3.78883e9\n",
+       " -4.31507e6  -1.54989e6  -1.86619e7     -1.69619e9  -1.80553e9  -1.93308e9\n",
+       " -1.57129e9  -1.81044e6  -1.92703e9  …  -1.13318e9  -8.10815e9  -8.30526e9\n",
+       " -4.20606e8  -2.34796e6  -3.94537e8     -1.42337e9  -3.49978e9  -4.1706e9\n",
+       " -5.83651e6  -2.97504e6  -1.06308e7     -9.23507e8  -1.96387e9  -1.91634e9\n",
+       " -2.10543e9  -3.51131e6  -2.21886e9     -4.65261e8  -5.17022e9  -3.58847e9\n",
+       " -4.75764e8  -2.77536e6  -5.85859e8     -2.45638e8  -1.50009e9  -1.90133e9\n",
+       "  ⋮                                  ⋱   ⋮                      \n",
+       " -4.70233e8  -2.80398e6  -3.57556e8     -5.21951e7  -7.43286e8  -7.45073e8\n",
+       " -3.72942e6  -1.98932e6  -2.17141e7     -6.00977e7  -2.05206e8  -1.86909e8\n",
+       " -1.53754e9  -1.16164e6  -1.66538e9  …  -3.7565e7   -2.71575e9  -2.38043e9\n",
+       " -4.85336e8  -1.25713e6  -4.6695e8      -3.10189e7  -8.37842e8  -8.82834e8\n",
+       " -4.59619e6  -1.47417e6  -2.09119e7     -5.12731e7  -1.88895e8  -1.67392e8\n",
+       " -1.87051e9  -1.86681e6  -1.57635e9     -2.82057e7  -2.80612e9  -2.45542e9\n",
+       " -3.80183e8  -2.39604e6  -5.05507e8     -2.96679e7  -8.71673e8  -5.83633e8\n",
+       " -6.34802e6  -2.98977e6  -9.40355e6  …  -3.41032e7  -9.29168e7  -7.60659e7\n",
+       " -1.51191e9  -3.50479e6  -2.21026e9     -1.84439e9  -7.84305e9  -7.44082e9"
       ]
      },
      "metadata": {},
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 54,
    "id": "fa135fed",
    "metadata": {},
    "outputs": [],
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 55,
    "id": "253768a4",
    "metadata": {},
    "outputs": [
@@ -637,12 +637,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ------- -------- ------- -------- ---------- ------------------------------------------------------------ --------- ---------- ----------\n",
-      " \u001b[1m state \u001b[0m \u001b[1m action \u001b[0m \u001b[1m  drug \u001b[0m \u001b[1m  level \u001b[0m \u001b[1m unitcost \u001b[0m \u001b[1m                                              concentration \u001b[0m \u001b[1m   spend \u001b[0m \u001b[1m        γ \u001b[0m \u001b[1m  q_value \u001b[0m\n",
-      " \u001b[90m Int64 \u001b[0m \u001b[90m  Int64 \u001b[0m \u001b[90m Int64 \u001b[0m \u001b[90m String \u001b[0m \u001b[90m  Float64 \u001b[0m \u001b[90m @NamedTuple{high::Float64, nominal::Float64, low::Float64} \u001b[0m \u001b[90m Float64 \u001b[0m \u001b[90m  Float64 \u001b[0m \u001b[90m  Float64 \u001b[0m\n",
-      " ------- -------- ------- -------- ---------- ------------------------------------------------------------ --------- ---------- ----------\n",
-      "     15        2       2      low        0.5                       (high = 5.0, nominal = 4.5, low = 1.4)      56.0   0.573593   -14705.8\n",
-      " ------- -------- ------- -------- ---------- ------------------------------------------------------------ --------- ---------- ----------\n"
+      " ------- -------- ------- -------- ---------- ------------------------------------------------------------ --------- --------- ------------\n",
+      " \u001b[1m state \u001b[0m \u001b[1m action \u001b[0m \u001b[1m  drug \u001b[0m \u001b[1m  level \u001b[0m \u001b[1m unitcost \u001b[0m \u001b[1m                                              concentration \u001b[0m \u001b[1m   spend \u001b[0m \u001b[1m       γ \u001b[0m \u001b[1m    q_value \u001b[0m\n",
+      " \u001b[90m Int64 \u001b[0m \u001b[90m  Int64 \u001b[0m \u001b[90m Int64 \u001b[0m \u001b[90m String \u001b[0m \u001b[90m  Float64 \u001b[0m \u001b[90m @NamedTuple{high::Float64, nominal::Float64, low::Float64} \u001b[0m \u001b[90m Float64 \u001b[0m \u001b[90m Float64 \u001b[0m \u001b[90m    Float64 \u001b[0m\n",
+      " ------- -------- ------- -------- ---------- ------------------------------------------------------------ --------- --------- ------------\n",
+      "     15        2       2      low        0.1                       (high = 7.0, nominal = 4.5, low = 1.4)      11.2   2.18393   -2.04969e6\n",
+      " ------- -------- ------- -------- ---------- ------------------------------------------------------------ --------- --------- ------------\n"
      ]
     }
    ],
@@ -738,8 +738,26 @@
     "\n",
     "Check whether the policy selects cheaper drugs over expensive ones and whether the selected dosage levels are predominantly low rather than high. \n",
     "\n",
-    "__Answer__: Describe what happened in test case 1 here ...."
+    "__Answer__: Describe what happened in test case 1 here ....\n",
+    "\n",
+    "When the budget was smaller, the agent recomends drug 2 at low concentration (1.4) and spends 11.2$ and has a -2.04x10^6 q-value and Y=2.18393. When the budget increases, drug 2 is still recomended at a low concentration but$144 are spend, Y=0.0211854 and the q-value is -39700.0."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5474f81f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42d2cebb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
