--- a/PS6-CHEME-5800-Student-QDrugs-Fall-2025.ipynb
+++ b/PS6-CHEME-5800-Student-QDrugs-Fall-2025.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4cdd3b61",
    "metadata": {},
    "outputs": [],
@@ -154,10 +154,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "03be1ceb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "experiment (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "function experiment(context::MyExperimentalDrugCocktailContext, s::Int64, a::Int64)\n",
     "    #This function takes in a context object, which contains information about the drug types,\n",
@@ -176,7 +186,7 @@
     "    costs = context.cost; # drug costs\n",
     "    bounds = context.bounds; # drug concentration bounds\n",
     "    W = context.W; # drug interaction matrix\n",
-    "    safety = context.safety; # safety constraint for maximum allowable dosage units: mg/kg-day\n",
+    "    S = context.S; # safety constraint for maximum allowable dosage units: mg/kg-day\n",
     "    γ = context.γ; # discount factor\n",
     "    B = 100; # budget in USD\n",
     "    N = 2^K; # number of actions\n",
@@ -277,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "37f641d8",
    "metadata": {},
    "outputs": [],
@@ -288,7 +298,7 @@
     "𝒮 = range(1, stop=m^K, step=1) |> collect; # state space: m^K possible dosage level configurations\n",
     "W = 80.0; # weight of the patient in kg\n",
     "B = 100.0; # TODO: you can change the budget in USD\n",
-    "safety = 1.0; # TODO: need to set a safety constraint for maximum allowable dosage units: mg/kg-day"
+    "S = 1.0; # TODO: need to set a safety constraint for maximum allowable dosage units: mg/kg-day"
    ]
   },
   {
@@ -301,10 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7e439604",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "return B"
    ]
@@ -332,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e4ffe604",
    "metadata": {},
    "outputs": [],
@@ -373,7 +393,7 @@
     "    ß= 0.5; #safety factor variable \n",
     "    bounds = zeros(Float64, K, 2); # define bounds array\n",
     "    for i ∈ 1:K #for all drug types\n",
-    "        bounds[i,2] = (1+ß*randn())*safety; #max \n",
+    "        bounds[i,2] = (1+ß*randn())*S; #max \n",
     "        bounds[i,1] = (0.0); # min\n",
     "    end\n",
     "        \n",
@@ -387,7 +407,7 @@
     "        𝒮=𝒮,\n",
     "        W=W, \n",
     "        B=B,\n",
-    "        safety=safety,\n",
+    "        S=S,\n",
     "        cost =costs,\n",
     "        levels=levels,\n",
     "        γ=γ,\n",
@@ -402,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5b5cbc4d",
    "metadata": {},
    "outputs": [],
@@ -418,10 +438,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "42c97063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ------- ----------- ---------- -------------- ----------- ---------\n",
+      " \u001b[1m  drug \u001b[0m \u001b[1m unit_cost \u001b[0m \u001b[1m low_conc \u001b[0m \u001b[1m nominal_conc \u001b[0m \u001b[1m high_conc \u001b[0m \u001b[1m       γ \u001b[0m\n",
+      " \u001b[90m Int64 \u001b[0m \u001b[90m   Float64 \u001b[0m \u001b[90m  Float64 \u001b[0m \u001b[90m      Float64 \u001b[0m \u001b[90m   Float64 \u001b[0m \u001b[90m Float64 \u001b[0m\n",
+      " ------- ----------- ---------- -------------- ----------- ---------\n",
+      "      1         0.9        1.0            4.9         5.0       1.5\n",
+      "      2         0.4        1.6            4.7         5.0       2.0\n",
+      "      3         0.7        1.3            2.6         5.0      -2.0\n",
+      " ------- ----------- ---------- -------------- ----------- ---------\n"
+     ]
+    }
+   ],
    "source": [
     "let\n",
     "    # initialize -\n",
@@ -468,10 +503,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "383fe3d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyQLearningAgentModel([1, 2, 3, 4, 5, 6, 7, 8, 9, 10  …  18, 19, 20, 21, 22, 23, 24, 25, 26, 27], [1, 2, 3, 4, 5, 6, 7, 8], 0.95, 0.1, [0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mylearningagent = let\n",
     "\n",
@@ -519,10 +564,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f29c5ccf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `safety` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `safety` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] experiment(context::MyExperimentalDrugCocktailContext, s::Int64, a::Int64)\n",
+      "   @ Main ~/Documents/GitHub/ps6-cheme-5800-f25-sp2229/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X10sZmlsZQ==.jl:78\n",
+      " [2] solve(agent::MyQLearningAgentModel, environment::MyExperimentalDrugCocktailContext; maxsteps::Int64, δ::Float64, worldmodel::typeof(experiment))\n",
+      "   @ Main ~/Documents/GitHub/ps6-cheme-5800-f25-sp2229/src/Compute.jl:48\n",
+      " [3] top-level scope\n",
+      "   @ ~/Documents/GitHub/ps6-cheme-5800-f25-sp2229/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X31sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
    "source": [
     "result = solve(mylearningagent, contextmodel; \n",
     "    maxsteps = 10000, δ = 0.0001, worldmodel = experiment);"
@@ -684,6 +747,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ae327e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "ac31857d",
    "metadata": {},
@@ -697,7 +768,7 @@
     "\n",
     "__Answer__: Describe what happened in test case 2 here ....\n",
     "\n",
-    "I made drug 2 the negative efficacy value. When the budget was greater, drug 3 was selected. I thought that it would not select drug 2 when the efficacy was negative and the budget decreased to $50 (case 1 shows it will chose drug 2 with this budget because it is the cheapest option), but drug 2 was selected. Therefore the negative efficacy values do not weigh as much as budget constraints when the policy is selecting a drug. "
+    "I made drug 3 the negative efficacy value and drug 1 at a high dose was selected. Drug 1 was selected because it will provide the highest effectiveness given the budget constraints. Therefore the negative efficacy values weigh on the policy decision making like the budget constraints because the learned policy WILL systematically exclude drugs with neggative $\\gamma$ values."
    ]
   },
   {
